# platform.core.system.sensor-framework

./: AUTHORS  CMakeLists.txt  sensor-framework.manifest  sf_data_stream-mfld-blackbay.conf  sf_data_stream.conf.in  sf_data_stream_sim.conf.in  sf_filter.conf.in  sf_filter_sim.conf.in  sf_processor-mfld-blackbay.conf  sf_processor.conf.in  sf_processor_sim.conf.in  sf_sensor.conf.in  sf_sensor_sim.conf.in  sfsvc
SensorFusion/: Quat2Euler.m  Quat2RotMat.m  QuatProd.m  RotMat2Quat.m  SF_Orien.m
SensorFusion/lib/: RotMat2Quat.m
debian/: changelog  control  rules  sensor-framework.install.in  sensor-framework.postinst.in
packaging/: sensor-framework.changes  sensor-framework.service  sensor-framework.spec
server/: CMakeLists.txt
server/include/: ccatalog.h  cdata_stream.h  cfilter_catalog.h  cprocessor_catalog.h  csensor_catalog.h  cserver.h  ctrim.h  resource_str.h
server/src/: ccatalog.cpp  cdata_stream.cpp  cfilter_catalog.cpp  cprocessor_catalog.cpp  csensor_catalog.cpp  cserver.cpp  ctrim.cpp  main.cpp  resource_str.cpp
systemd/: sensor-framework.service  sensor-framework.socket
